# lt-rs

./: .clangd  .gitignore  .gitmodules  BINDINGS.md  Cargo.toml  LICENSE  README.md  alert_gen.sh  build.rs  expanded.rs  flake.nix  rustfmt.toml
.cargo/: config.toml
cpp/: create_torrent.cpp  create_torrent.h  error.cpp  error.h  filter.cpp  filter.h  lt.cpp  lt.h  torrent_handle.cpp  torrent_handle.h  torrent_info.cpp  torrent_info.h
cpp/alerts/: add_torrent.cpp  add_torrent.h  block_downloading.cpp  block_downloading.h  block_timeout.cpp  block_timeout.h  dht_reply.cpp  dht_reply.h  file_completed.cpp  file_completed.h  file_error.cpp  file_error.h  file_rename_failed.cpp  file_rename_failed.h  file_renamed.cpp  file_renamed.h  hash_failed.cpp  hash_failed.h  invalid_request.cpp  invalid_request.h  metadata_failed.cpp  metadata_failed.h  peer_alert.cpp  peer_alert.h  peer_connect.cpp  peer_connect.h  peer_disconnected.cpp  peer_disconnected.h  peer_error.cpp  peer_error.h  performance.cpp  performance.h  piece_finished.cpp  piece_finished.h  read_piece.cpp  read_piece.h  request_dropped.cpp  request_dropped.h  save_resume_data.cpp  save_resume_data.h  (+44 more)
src/: add_torrent_params.rs  create_torrent.rs  errors.rs  ffi.rs  info_hash.rs  ip_filter.rs  lib.rs  lt.cpp  lt.h  peer_info.rs  session.rs  settings_pack.rs  torrent_handle.rs  torrent_info.rs  torrent_status.rs
src/alerts/: mod.rs  operation.rs  peer_alert.rs  performance_warning.rs  protocol_version.rs  torrent_alert.rs  torrent_state.rs  tracker_alert.rs  types.rs
src/alerts/implementations/: add_torrent.rs  block_downloading.rs  block_timeout.rs  dht_reply.rs  file_completed.rs  file_error.rs  file_rename_failed.rs  file_renamed.rs  hash_failed.rs  invalid_request.rs  mod.rs  (+34 more)
src/ffi/: error.rs  mod.rs  torrent_handle.rs
src/types/: download_priority.rs  storage_mode.rs
tests/: integration.rs  lt_tests.rs
(+40 files in other folders)
