[package]
name = "lt-rs"
version = "0.1.3"
edition = "2024"
authors = ["Pedro Liduino <liduinopedro@gmail.com>"]
description = "Safe Libtorrent bindings for rust"
repository = "https://github.com/pliduino/lt-rs"
keywords = ["libtorrent", "bittorrent", "torrent"]
categories = ["api-bindings", "network-programming"]
readme = "README.md"
license = "MIT"

[lints.rust]
dead_code = "allow"

[dependencies]
tracing = "0.1.41"
cxx = "1.0.186"
bitflags = "2.9.4"
thiserror = "2.0.16"
base64 = "0.22.1"
paste = "1.0.15"
cfg-if = "1.0.4"
num_enum = { version = "0.7.5", optional = true }

[build-dependencies]
cxx-build = "1.0.186"
cmake = "0.1.54"
cfg-if = "1.0.4"

[features]
default = ["static-libtorrent"]
safe_enums = ["num_enum"]
lto = []
static-libtorrent = []
static-boost = []
static-ssl = []
