[package]
name = "libtorrent-rs"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for libtorrent"
license = "MIT"

[features]
default = []
safe_enums = []
lto = []
# build and run libtorrent's own C++ test suite (requires cmake + system libtorrent)
lt-tests = []

[dependencies]
base64 = "0.22"
bitflags = "2"
cfg-if = "1"
cxx = "1"
paste = "1"
thiserror = "2"
tracing = "0.1"
num_enum = { version = "0.7" }

[build-dependencies]
anyhow = "1"
cxx-build = "1"
